--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </head>
 
   <style>
+    * {
+      font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    }
+
     #site-container {
       justify-content: center;
       display: flex;
@@ -25,23 +29,57 @@
     }
 
     #top-container {
-      background-color: white;
+      background-color: rgb(31, 31, 31);
       display: flex;
-      flex: 0 1 40px;
+      flex: 0 1 50px;
+      border-bottom: 1px solid rgb(255, 255, 255);
     }
 
     #game-area {
-      background-color: rgb(92, 92, 92);
+      background-color: rgb(31, 31, 31);
       height: auto;
       display: flex;
       flex: 1 1 auto;
     }
 
     #bottom-container {
-      background-color: rgb(101, 122, 219);
+      background-color: rgb(31, 31, 31);
       display: flex;
-      flex: 0 1 40px;
+      flex: 0 1 50px;
+      border-top: 1px solid rgb(255, 255, 255);
     }
+
+    #life-percent {
+      color: rgb(16, 219, 255);
+      width: 100px;
+      font-style: italic;
+      display: flex;
+      justify-content: center;
+      margin-top: 5px;
+      margin-right: 2px;
+    }
+
+    #percent-whole-digits {
+      font-size: 32px;
+    }
+
+    #percent-decimal-digits {
+      margin-top: 13px;
+      font-size: 18px;
+    }
+
+    #life-bar-container {
+      width: 100%;
+      padding: 10px;
+    }
+
+    #life-bar {
+      background-color: rgb(16, 219, 255);
+      width: 100%;
+      height: 100%;
+      border-radius: 24px;
+    }
+
   </style>
 
   <body style="background-color: rgb(100, 127, 131);">
@@ -54,7 +92,14 @@
           
         </div>
         <div id="bottom-container">
-
+          <div id="life-percent">
+            <div id="percent-whole-digits">100</div>
+            <div id="percent-decimal-digits">00</div>
+            <div style="font-size: 24px; margin-top: 6px;">%</div>
+          </div>
+          <div id="life-bar-container">
+            <div id="life-bar"></div>
+          </div>
         </div>
       </div>
     </div>
