--- a/index.html
+++ b/index.html
@@ -5,82 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="main-style.css">
     <title>Splitter</title>
   </head>
-
-  <style>
-    * {
-      font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    }
-
-    #site-container {
-      justify-content: center;
-      display: flex;
-    }
-
-    #game-window-container {
-      min-width: 250px;
-      min-height: 450px;
-      max-width: 1000px;
-      max-height: 800px;
-      display: flex;
-      flex-flow: column;
-      background-color: black;
-    }
-
-    #top-container {
-      background-color: rgb(31, 31, 31);
-      display: flex;
-      flex: 0 1 50px;
-      border-bottom: 1px solid rgb(255, 255, 255);
-    }
-
-    #game-area {
-      background-color: rgb(31, 31, 31);
-      height: auto;
-      display: flex;
-      flex: 1 1 auto;
-    }
-
-    #bottom-container {
-      background-color: rgb(31, 31, 31);
-      display: flex;
-      flex: 0 1 50px;
-      border-top: 1px solid rgb(255, 255, 255);
-    }
-
-    #life-percent {
-      color: rgb(16, 219, 255);
-      width: 100px;
-      font-style: italic;
-      display: flex;
-      justify-content: center;
-      margin-top: 5px;
-      margin-right: 2px;
-    }
-
-    #percent-whole-digits {
-      font-size: 32px;
-    }
-
-    #percent-decimal-digits {
-      margin-top: 13px;
-      font-size: 18px;
-    }
-
-    #life-bar-container {
-      width: 100%;
-      padding: 10px;
-    }
-
-    #life-bar {
-      background-color: rgb(16, 219, 255);
-      width: 100%;
-      height: 100%;
-      border-radius: 24px;
-    }
-
-  </style>
 
   <body style="background-color: rgb(100, 127, 131);">
     <div id="site-container">
@@ -105,6 +32,6 @@
     </div>
   </body>
     
-  <script src="main.js"></script>
+  <script type="module" src="./src/main.js"></script>
 
 </html>
