modularized, added tick

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main-style.css">
+    <link rel="stylesheet" href="./src/ui/top_container/top-container.css">
+    <link rel="stylesheet" href="./src/ui/game_container/game-container.css">
+    <link rel="stylesheet" href="./src/ui/bottom_container/bottom-container.css">
     <title>Splitter</title>
   </head>
 
@@ -25,7 +28,9 @@
             <div style="font-size: 24px; margin-top: 6px;">%</div>
           </div>
           <div id="life-bar-container">
-            <div id="life-bar"></div>
+            <div id="life-bar-border">
+              <div id="life-bar"></div>
+            </div>
           </div>
         </div>
       </div>
