--- a/index.html
+++ b/index.html
@@ -38,5 +38,7 @@
   </body>
     
   <script type="module" src="./src/main.js"></script>
+  <script type="module" src="./src/State.js"></script>
+  <script type="module" src="./src/ui/Window.js"></script>
 
 </html>
