--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     </div>
   </body>
     
-  <script type="module" src="./src/main.js"></script>
+  <script type="module" src="./src/main.mjs"></script>
 
 </html>
