start design on top ui

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
     <div id="site-container">
       <div id="game-window-container">
         <div id="top-container">
+          <div id="total-energy-container"></div>
+          <div id="heat-bar-container">
+            <div id="heat-bar-border">
+              <div id="heat-bar"></div>
+            </div>
+          </div>
+          <div id="heat-level-container">
 
+          </div>
         </div>
         <div id="game-area">
           
