add pause button, ui tweaks

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
               <div id="life-bar"></div>
             </div>
           </div>
+          <div id="pause-button-container">
+            <div id="pause-button">⏸️</div>
+          </div>
         </div>
       </div>
     </div>
