add canvas to game area

--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
               <div id="heat-bar"></div>
             </div>
           </div>
-          <div id="heat-level-container">
-
-          </div>
+          <div id="heat-level-container"></div>
         </div>
         <div id="game-area">
-          
+          <canvas id="game-canvas"></canvas>
         </div>
         <div id="bottom-container">
           <div id="life-percent">
